--- a/ReserveitAssignment/appsettings.Development.json
+++ b/ReserveitAssignment/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(LocalDB)\\MSSQLLocalDB;Database=Reserveit;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
